include_directories(../../codec/amf/include)
include_directories(../../codec/opus-head/include)
include_directories(../../codec/aom-av1/include)
include_directories(../../codec/mp3-header/include)
include_directories(../../codec/mpeg4-aac/include)
include_directories(../../codec/mpeg4-avc/include)
include_directories(../../codec/mpeg4-hevc/include)
include_directories(../mov/include)
include_directories(../ts/include)
include_directories(include)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} SRC_LIST)

get_filename_component(name ${CMAKE_CURRENT_SOURCE_DIR} NAME)
add_library(${name}_shared SHARED ${SRC_LIST})
set_target_properties(${name}_shared PROPERTIES OUTPUT_NAME ${name})
target_link_libraries(${name}_shared amf)
target_link_libraries(${name}_shared aom-+av1)
target_link_libraries(${name}_shared mp3-header)
target_link_libraries(${name}_shared mpeg4-aac)
target_link_libraries(${name}_shared mpeg4-avc)
target_link_libraries(${name}_shared mpeg4-hevc)
target_link_libraries(${name}_shared opus-head)

if (BUILDSTATIC)
  add_library(lib${name}_static STATIC ${SRC_LIST})
  set_target_properties(lib${name}_static PROPERTIES OUTPUT_NAME ${name})
endif()

add_subdirectory(test)
