include_directories(../../codec/amf/include)
include_directories(../../codec/opus-head/include)
include_directories(../../codec/aom-av1/include)
include_directories(../../codec/mp3-header/include)
include_directories(../../codec/mpeg4-aac/include)
include_directories(../../codec/mpeg4-avc/include)
include_directories(../../codec/mpeg4-hevc/include)
include_directories(../mov/include)
include_directories(../ts/include)
include_directories(include)
include_directories(include)
get_filename_component(name ${CMAKE_CURRENT_SOURCE_DIR} NAME)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} src_list)

add_library(${name} ${src_list})

add_subdirectory(test)
target_link_libraries(${name} amf)
target_link_libraries(${name} aom-av1)
target_link_libraries(${name} mp3-header)
target_link_libraries(${name} mpeg4-aac)
target_link_libraries(${name} mpeg4-avc)
target_link_libraries(${name} mpeg4-hevc)
target_link_libraries(${name} opus-head)
