include_directories(../../../codec/mpeg4-aac/include)
include_directories(../../../codec/mpeg4-avc/include)
include_directories(../../../codec/mpeg4-hevc/include)
include_directories(../../mov/include)
get_filename_component(name ${CMAKE_CURRENT_SOURCE_DIR} PATH)
get_filename_component(name ${name} NAME)

aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} src_list)

set(exe  ${name}_test)
# add_executable(${exe} ${src_list})
add_executable(${exe} test.c h264-flv-test.c)
target_link_libraries(${exe} ${name})
target_link_libraries(${exe} amf)
target_link_libraries(${exe} mpeg4-aac)
target_link_libraries(${exe} mpeg4-avc)
target_link_libraries(${exe} mpeg4-hevc)
